tests/lean/bad_structures2.lean.expected.out
bad_structures2.lean:7:27: error: invalid 'structure' header, field 'x' from 'boo' has already been declared with a different type
  bool
and
  ℕ
bad_structures2.lean:12:27: error: invalid 'structure' header, field 'x' has already been declared with a different binder annotation
bad_structures2.lean:15:1: error: field 'x' has been declared in parent structure
bad_structures2.lean:18:2: error: invalid field, identifier expected
bad_structures2.lean:23:36: error: invalid 'structure' renaming, parent structure 'foo' does not contain field 'y'
bad_structures2.lean:25:23: error: invalid 'structure' extends, 'nat' is not a structure
bad_structures2.lean:27:23: error: invalid 'structure', expression must be a 'parent' structure
bad_structures2.lean:30:15: error: invalid 'structure', 'Type' expected
